# PerspectiveDistortionRemove

./: CMakeLists.txt  README.md
data/: brahma01-config.txt  config-affine-rectific-parallel-lines.txt
src/: CMakeLists.txt
src/PDR/: AppMain.cpp  CMakeLists.txt  GLImageWidget.cpp  GLImageWidget.h  GLRectangle.cpp  GLRenderTexture.h  MainWindow.cpp  MainWindow.ui  PDR.cpp  PDR.h
src/PerspectiveDistortionRemove/: CMakeLists.txt  GLImageWidget.cpp  GLRectangle.cpp  GLRectangle.h  GLRenderTexture.cpp  GLRenderTexture.h  MainWindow.cpp  MainWindow.h
src/affine-rectific-cross-ratio-console/: CMakeLists.txt  affine-rectif-cross-ratio.cpp
src/affine-rectific-cross-ratio-gui/: CMakeLists.txt  GLCrossRatioLines.cpp  GLCrossRatioLines.h  GLImageWidget.cpp  GLImageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/affine-rectific-parallel-lines-console/: CMakeLists.txt  affine-rectif-parallel-lines.cpp
src/affine-rectific-parallel-lines-gui/: GLImageWidget.cpp  GLImageWidget.h  GLLines.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/common/: Affine2Similarity.cpp  Affine2Similarity.h  Arcr.cpp  Arcr.h  Arpl.cpp  Arpl.h  Interpolation.h  MetricRectification.cpp  MetricRectification.h  PDR.cpp  PDR.h
src/metric-rectific-2-steps/: CMakeLists.txt  metric-rectific-2-steps.cpp
src/metric-rectification-console/: CMakeLists.txt  MetricRetification5LinesMain.cpp
src/metric-rectification-gui/: AppMain.cpp  CMakeLists.txt  GLImageWidget.cpp  GLImageWidget.h  GLLines.cpp  GLLines.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/metric-retification/: GLImageWidget.cpp  GLImageWidget.h  GLLines.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/pdr-console/: CMakeLists.txt  PDRMain.cpp
src/pdr-gui/: AppMain.cpp  CMakeLists.txt  GLImageWidget.cpp  GLImageWidget.h  GLRectangle.cpp  GLRectangle.h  GLRenderTexture.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
